refactor: use process instance keys as long in variable store